# RepoPilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance_task.md
.github/workflows/: ci.yml
docs/: cli-reference.md  configuration.md
prompts/: README.md  core-prompts.md
src/repopilot/: __init__.py  agent.py  cli.py  config.py  intent.py  intent_agent.py  mcp_server.py  permissions.py  session.py  settings_store.py  web.py
src/repopilot/prompts/: chat_prompt.md  intent_prompt.md  system_prompt.md
src/repopilot/tools/: __init__.py  network.py  repository.py
tests/: test_agent.py  test_cli.py  test_config.py  test_intent_agent.py  test_mcp_integration.py  test_network_tools.py  test_permissions.py  test_repository_tools.py  test_session.py  test_settings_store.py  test_web_api.py
