[project]
name = "repopilot"
version = "0.1.0"
description = "Read-only-first MCP agent for onboarding unfamiliar code repositories."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Zhou Xing" }
]
dependencies = [
    "fastapi>=0.115",
    "mcp[cli]>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
repopilot = "repopilot.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
